@@ -87,14 +87,12 @@ KNOWN MacFLTK BUGS
     The following FLTK things are not implemented or don't work
     at present:
 
-	- File handles (Fl::add_fd) are not implemented.
 	- Line styles are not fully implemented.
 	- Sub-sub-subwindow not tested.
 	- Image transparency is implemented as "screen-door" only
 	- The 'shiny' demo needs work (flush/aglFlush).
 	- Threads are not implemented.
 	- OpenGL subwindow during window resize changes position
-	- fl_measure returns wrong width (wrong current font?)
 
 
 TEST SUITE STATUS
